--- a/css/style.css
+++ b/css/style.css
@@ -2,26 +2,31 @@
 	background-image: url("../img/piasek.jpg");
 	background-size: cover;
 	width: 100%;
-	height: 700px;
+	height: 100%;
+	position: relative;
+}
+html {
+	height: 100%;
 }
 body {
-  left: 0;
-  margin: 0;
-  overflow: hidden;
-  position: relative;
-  background: #F2F3E9;
+	height: 100%;
+	left: 0;
+	margin: 0;
+	overflow: hidden;
+	position: relative;
+	background: #F2F3E9;
 }
 .menu {
   background: #F2F3E9;
-  left: -285px;  /* start off behind the scenes */
+  left: -150px;  
   height: 100%;
   position: fixed;
-  width: 285px;
+  width: 150px;
 }
 .menu ul {
   border-top: 1px solid #696969;
   list-style: none;
-  margin: 0;
+  margin: 125px 0 0 0;
   padding: 0;
 }
 
@@ -30,8 +35,8 @@ body {
   font-family: 'Amatic SC', cursive;
   line-height: 45px;
   padding-bottom: 3px;
-  padding-left: 20px;
   padding-top: 3px;
+  text-align: center;
 }
 
 .menu a {
@@ -40,15 +45,12 @@ body {
   font-weight: bold;
   text-decoration: none;
 }
-.icon-close {
-  cursor: pointer;
-  padding-left: 10px;
-  padding-top: 10px;
+.menu a:hover {
+  color: #8fa799;
 }
 .icon-menu > h1 {
   color: #fff;
   background-color: rgba(116,119,82,0.6);
-  display: inline-block;
   border-radius: 50px;
   cursor: pointer;
   font-family: 'Amatic SC', cursive;
@@ -59,12 +61,16 @@ body {
   padding-right: 25px;
   padding-top: 25px;
   margin-top: 10px;
+  margin-left: 20px;
   text-decoration: none;
   float: left;
+  position: fixed;	
+  top: 0;
 }
 .title {
 	width: 100%;
 	margin-top: -65px;
+	height: 150px;
 }
 .title > h1 {
 	color: #fff;
@@ -73,16 +79,19 @@ body {
 	font-size: 95px;
 	font-weight: bold;
 	text-align: center;
-	padding-right: 90px;
 }
-.sea_star {
-	float: right;
-	margin: 60px 0 0 45px;
-	width: 20%;
+.main-btn {
+	text-align: center;
+	width: 25%;
+	display: inline-block;
+	vertical-align: middle;
+	align-self: center;
 }
-.sea_star > a > img {
+.main-btn > a > img {
 	height: 50%;
 	width: 50%;
-	cursor: pointer;
-	margin: auto;
+}
+.main-btn-container {
+	display: flex;
+	height: calc(100% - 150px);
 }
